internal/translate/testdata/basic_httpproxy/in-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: basic-http
spec:
  gatewayClassName: contour
