internal/translate/testdata/basic_httpproxy/in-proxies.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: foo-basic.bar.com
  routes:
  - conditions:
    - prefix: /
    services:
    - name: s1
      port: 80
