internal/translate/testdata/basic_httpproxy/out-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: basic
spec:
  parentRefs:
  - name: basic-http
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: s1
      port: 80
